Y1/Module_2_Object_Oriented_Programming/intellijml-1.1.7/src/test/semanticsAnnotatorTestData/MultipleDuplicateVisibilityModifiers.java
package semanticsAnnotatorTestData;

public class MultipleDuplicateVisibilityModifiers {
    int x = 5; //@ <error descr="You cannot have multiple specification visibility modifiers (spec_public or spec_protected)">spec_protected</error> <error descr="You cannot have multiple specification visibility modifiers (spec_public or spec_protected)">spec_public</error> <error descr="You cannot have multiple specification visibility modifiers (spec_public or spec_protected)">spec_public</error> <error descr="You cannot have multiple specification visibility modifiers (spec_public or spec_protected)">spec_protected</error>

    //@ private <error descr="You cannot have multiple visibility modifiers (public, protected or private)">public</error> <error descr="You cannot have multiple visibility modifiers (public, protected or private)">private</error> <error descr="You cannot have multiple visibility modifiers (public, protected or private)">protected</error> <error descr="You cannot have multiple visibility modifiers (public, protected or private)">public</error> invariant 10 >= 5;
}
